@@ -19,6 +19,8 @@ readme_from 'Grid.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0;
 requires 'Error::Pure' => 0;
+requires 'Mo::utils' => 0.01;
+requires 'Mo::utils::CSS' => 0.02;
 requires 'Tags::HTML' => 0.08;
 requires 'Scalar::Util' => 0;
 requires 'perl' => '5.8.0';
